--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>たかこうぼう</title>
   <meta name="description" content="出雲織を習得し、島根県安来市に工房を構える「たかこうぼう」の紹介サイトです。藍染の糸や出雲織のはぎれを用いた、アクセサリーや小物を制作しています。">
   <meta name="format-detection" content="telephone=no">
+  <meta name="google-site-verification" content="Mt61aUDdLhTaYSi1DwGOdspTWk4MqzI9V9RaRCy-cCU" />
 
   <link rel="icon" href="img/favicon2.ico">
   <!-- css読み込み -->
