--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <!-- セクション共通インナー----------------------------- -->
         <div class="common-inner">
           <h2>プロフィール</h2>
-          <p>安来市にある「出雲織」の工房にて
+          <p>安来市にある「出雲織」の工房にて<br>
             機織りの技術を習得。<br>
             かなりのスローペースですが、<br>
             自宅にて制作活動中。</p>
@@ -118,8 +118,9 @@
         <!-- セクション共通インナー----------------------------- -->
         <div class="common-inner">
           <h2>作品紹介</h2>
-          <p>反物は「作りたい柄、好きな柄を作ればいい」という教えのもと、<br>
-            昔ながらの柄にこだわらず「乙女心」をくすぐるような柄を目指しています。<br>
+          <p>反物は「作りたい柄、好きな柄を作ればいい」<br>
+            という教えのもと、昔ながらの柄にこだわらず<br>
+            「乙女心」をくすぐるような柄を目指しています。<br>
             小物たちは、はぎれや残った糸も余すことなく<br>
             使ってあげたいと思いながら作っています。</p>
         </div>
@@ -170,7 +171,7 @@
               <p><span><img src="img/mail_icon.svg" alt=""></span><a href="mailto:pecha240805@gmail.com">pecha240805@gmail.com</a></p>
 
               <!-- tel -->
-              <p><span><img src="img/iphone_icon.svg" alt=""></span><a href="tel:">000-0000-0000</a></p>
+              <p><span><img src="img/iphone_icon.svg" alt=""></span><a href="tel:">080-2917-1497</a></p>
 
             </div>
 
