--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <link rel="stylesheet" type="text/css" href="css/vegas.min.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script type="text/javascript" src="js/vegas.min.js"></script>
+  
+  <!-- もじデパ-->
+  <script type='text/javascript' src='http://api.mojidepa.com/api/jsapi?k=0ffe5771ad81a473f61f5966936109ae&i=1' charset='utf-8'></script>
 
 
 <body>
