--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <script type="text/javascript" src="js/vegas.min.js"></script>
   
   <!-- もじデパ-->
-  <script type='text/javascript' src='http://api.mojidepa.com/api/jsapi?k=0ffe5771ad81a473f61f5966936109ae&i=1' charset='utf-8'></script>
-
-
+ <script type='text/javascript' src='http://api.mojidepa.com/api/jsapi?k=0ffe5771ad81a473f61f5966936109ae&i=1' charset='utf-8'></script>
+  </head>
+  
 <body>
   <div id="wrapper">
     <header class="header">
