--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
               <!-- tel -->
               <p><span><img src="img/iphone_icon.svg" alt=""></span><a href="tel:">080-2917-1497</a></p>
 
+               <!--insta -->
+              <p><span><img src="img/insta_icon.svg" alt=""></span><a href="https://www.instagram.com/takakoubou_sagyouba?igsh=eTh3NmJ2eHhuem02"></a></p>
             </div>
 
             <!-- イメージ -->
