--- a/index.html
+++ b/index.html
@@ -177,8 +177,13 @@
               <p><span><img src="img/iphone_icon.svg" alt=""></span><a href="tel:">080-2917-1497</a></p>
 
                <!--insta -->
-              <p><span><img src="img/insta_icon.svg" alt=""></span>
-                <a href="https://www.instagram.com/takakoubou_sagyouba?igsh=eTh3NmJ2eHhuem02" target="_blank" rel="noopener noreferrer"></a></p>
+              <p>
+                <span>
+                 <a href="https://www.instagram.com/takakoubou_sagyouba?igsh=eTh3NmJ2eHhuem02" target="_blank" rel="noopener noreferrer">
+                   <img src="img/insta_icon.svg" alt="">
+              </a>
+              </span>
+               </p>
             </div>
 
             <!-- イメージ -->
